
***   Add --no-trace-params.

***   Add assertions on 'unique if', bug725. [Jeff Bush] 

***   Add PINCONNECTEMPTY warning. [Holger Waechtler]

***   Support parameter arrays, bug683. [Jeremy Bennett]

****  Documentation fixes, bug723. [Glen Gibb]

****  Fix tracing of package variables and real arrays.

****  Fix missing coverage line on else-if, bug727. [Sharad Bagri]

****  Fix Mac OS-X test issues. [Holger Waechtler]

****  Fix C++-2011 warnings.


* Verilator 3.856 2014-03-11

***   Support case inside, bug708. [Jan Egil Ruud]

***   Add parameters into trace files, bug706. [Alex Solomatnikov]

****  Fix parsing "#0 'b0", bug256.

****  Fix array bound checks on real variables.

****  Fix --skip-identical mis-detecting on OS-X, bug707.

****  Fix missing VL_SHIFTRS_IQI with WIDTH warning, bug714. [Fabrizio Ferrandi]

****  Fix signed shift right optimization, bug715. [Fabrizio Ferrandi]

****  Fix internal error on "input x =" syntax error, bug716. [Lane Brooks]

****  Fix slice extraction from packed array, bug717. [Jan Egil Ruud]

****  Fix inside statement EQWILD error, bug718. [Jan Egil Ruud]


* Verilator 3.855 2014-01-18

***   Support modport import, bug696. [Jeremy Bennett]

***   Add --trace-structs to show struct names, bug673. [Chris Randall]

****  Fix tracing of packed structs, bug705. [Jie Xu]

****  Fix --lint-only with MinGW, msg1283. [HyungKi Jeong]

****  Fix some delayed assignments of typedefed unpacked arrays.

****  Fix wire declarations with size and not range, bug466. [Alex Solomatnikov]

****  Fix parameter pin vs. normal pin error, bug704. [Alex Solomatnikov]


* Verilator 3.854 2013-11-26

***   Add UNPACKED warning to convert unpacked structs. [Jeremy Bennett]

***   Add --compiler clang to work around compiler bug, bug694. [Stefan Ludwig]

****  Support vpi_get of vpiSuppressVal, bug687. [Varun Koyyalagunta]

****  Support vpi_get_time, bug688. [Varun Koyyalagunta]
