@@ -188,11 +188,11 @@ public:
 	UINFO(9, "     importIf  se"<<(void*)this<<" from se"<<(void*)srcp<<endl);
 	for (IdNameMap::const_iterator it=srcp->m_idNameMap.begin(); it!=srcp->m_idNameMap.end(); ++it) {
 	    const string& name = it->first;
-	    VSymEnt* srcp = it->second;
-	    VSymEnt* symp = new VSymEnt(graphp, srcp);
-	    reinsert(name, symp);
+	    VSymEnt* subSrcp = it->second;
+	    VSymEnt* subSymp = new VSymEnt(graphp, subSrcp);
+	    reinsert(name, subSymp);
 	    // And recurse to create children
-	    srcp->importFromIface(graphp, symp);
+	    subSymp->importFromIface(graphp, subSrcp);
 	}
     }
     void cellErrorScopes(AstNode* lookp, string prettyName="") {
